--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "angular-route": "1.7.8",
     "bootstrap": "3.4.1",
     "bpmn-font": "0.8.0",
-    "camunda-bpm-sdk-js": "git://github.com/camunda/camunda-bpm-sdk-js#master",
-    "camunda-commons-ui": "git://github.com/camunda/camunda-commons-ui#master",
+    "camunda-bpm-sdk-js": "git://github.com/camunda/camunda-bpm-sdk-js#CAM-10319",
+    "camunda-commons-ui": "git://github.com/camunda/camunda-commons-ui#CAM-10319",
     "camunda-webapp-translations": "git://github.com/camunda/camunda-webapp-translations#master",
     "events": "3.0.0",
     "jquery": "3.3.1",
